fixed headeer on mobile

--- a/client/src/components/general/index.css
+++ b/client/src/components/general/index.css
@@ -7,6 +7,7 @@
 }
 
 .nav-btn {
+  line-height: normal;
   background-color: var(--deep-orange);
   border: 1px solid var(--deep-orange);
   color: var(--indigo);
@@ -20,6 +21,33 @@
 
 .nav-logo {
   padding-left: 15px !important;
+}
+
+#navBurger {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 25px;
+    width: 34px;
+    height: 34px;
+    max-width: 34px;
+    z-index: 75;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    /* background-color: green; */
+}
+
+.nav-burger-piece {
+    width: 100%;
+    height: 4px;
+    border-radius: 20px;
+    border: 1px solid transparent;
+    background-color: var(--deep-orange);
+}
+
+.nav-burger-piece-two {
+    transform: translateX(10px);
 }
 
 /* footer */
@@ -74,6 +102,30 @@
     flex-basis: 100%;
     margin-top: 20px;
   }
+
+  .nav-wrapper > .right {
+    position: absolute;
+    width: 100%;
+    top: 64px;
+    height: 100vh;
+    overflow: hidden;
+    background: rgb(0, 0, 0, 0.6);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: none;
+  }
+
+  .activate-navbar {
+      display: flex !important;
+  }
+
+  .stop-scroll {
+      overflow: hidden !important;
+  }
+
 }
 
 @media only screen and (min-width: 769px) {
@@ -81,5 +133,9 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+  }
+
+  #navBurger {
+      display: none;
   }
 }
